--- a/Liersch.Json_net35.csproj
+++ b/Liersch.Json_net35.csproj
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;CODE_ANALYSIS;NET20</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;CODE_ANALYSIS;NET35</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
@@ -27,7 +27,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;CODE_ANALYSIS;NET20</DefineConstants>
+    <DefineConstants>TRACE;CODE_ANALYSIS;NET35</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
@@ -44,11 +44,11 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\JsonReflectionBased\ExtensionAttribute.cs" />
-    <Compile Include="Source\JsonReflectionBased\SLExtensions_net20.cs" />
     <Compile Include="Source\JsonReflectionBased\SLJsonDeserializer.cs" />
     <Compile Include="Source\JsonReflectionBased\SLJsonMemberAttribute.cs" />
     <Compile Include="Source\JsonReflectionBased\SLJsonMemberType.cs" />
     <Compile Include="Source\JsonReflectionBased\SLJsonSerializer.cs" />
+    <Compile Include="Source\JsonReflectionBased\SLReflectionExtensions.cs" />
     <Compile Include="Source\Json\SLJsonConvert_net20.cs" />
     <Compile Include="Source\Json\SLJsonException.cs" />
     <Compile Include="Source\Json\SLJsonMonitor.cs" />
