--- a/Liersch.Json_sdk.csproj
+++ b/Liersch.Json_sdk.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net20;net30;net35;net40;net45;net46;netcoreapp1.0;netstandard1.0</TargetFrameworks>
+    <TargetFrameworks>net20;net30;net35;net40;net45;netcoreapp1.0;netstandard1.0</TargetFrameworks>
     <LangVersion>3</LangVersion>
     <AssemblyName>Liersch.Json</AssemblyName>
     <PackageId>Liersch.Json</PackageId>
