--- a/Liersch.Json/Liersch.Json_net20.csproj
+++ b/Liersch.Json/Liersch.Json_net20.csproj
@@ -45,26 +45,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Source\JsonReflectionBased\ExtensionAttribute.cs" />
-    <Compile Include="Source\JsonReflectionBased\SLJsonDeserializer.cs" />
-    <Compile Include="Source\JsonReflectionBased\SLJsonMemberAttribute.cs" />
-    <Compile Include="Source\JsonReflectionBased\SLJsonMemberType.cs" />
-    <Compile Include="Source\JsonReflectionBased\SLJsonSerializer.cs" />
-    <Compile Include="Source\JsonReflectionBased\SLReflectionExtensions.cs" />
-    <Compile Include="Source\Json\SLJsonConvert_net20.cs" />
-    <Compile Include="Source\Json\SLJsonConvert_netmf.cs" />
-    <Compile Include="Source\Json\SLJsonException.cs" />
-    <Compile Include="Source\Json\SLJsonMonitor.cs" />
-    <Compile Include="Source\Json\SLJsonNode.cs" />
-    <Compile Include="Source\Json\SLJsonNodeType.cs" />
-    <Compile Include="Source\Json\SLJsonNode_ItemsTyped.cs" />
-    <Compile Include="Source\Json\SLJsonNode_ItemsUntyped.cs" />
-    <Compile Include="Source\Json\SLJsonNode_Monitor.cs" />
-    <Compile Include="Source\Json\SLJsonNode_Operators.cs" />
-    <Compile Include="Source\Json\SLJsonNode_Serialization.cs" />
-    <Compile Include="Source\Json\SLJsonParser.cs" />
-    <Compile Include="Source\Json\SLJsonTokenizer.cs" />
-    <Compile Include="Source\Json\SLJsonWriter.cs" />
+    <Compile Include="JsonReflectionBased\ExtensionAttribute.cs" />
+    <Compile Include="JsonReflectionBased\SLJsonDeserializer.cs" />
+    <Compile Include="JsonReflectionBased\SLJsonMemberAttribute.cs" />
+    <Compile Include="JsonReflectionBased\SLJsonMemberType.cs" />
+    <Compile Include="JsonReflectionBased\SLJsonSerializer.cs" />
+    <Compile Include="JsonReflectionBased\SLReflectionExtensions.cs" />
+    <Compile Include="Json\SLJsonConvert_net20.cs" />
+    <Compile Include="Json\SLJsonConvert_netmf.cs" />
+    <Compile Include="Json\SLJsonException.cs" />
+    <Compile Include="Json\SLJsonMonitor.cs" />
+    <Compile Include="Json\SLJsonNode.cs" />
+    <Compile Include="Json\SLJsonNodeType.cs" />
+    <Compile Include="Json\SLJsonNode_ItemsTyped.cs" />
+    <Compile Include="Json\SLJsonNode_ItemsUntyped.cs" />
+    <Compile Include="Json\SLJsonNode_Monitor.cs" />
+    <Compile Include="Json\SLJsonNode_Operators.cs" />
+    <Compile Include="Json\SLJsonNode_Serialization.cs" />
+    <Compile Include="Json\SLJsonParser.cs" />
+    <Compile Include="Json\SLJsonTokenizer.cs" />
+    <Compile Include="Json\SLJsonWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Liersch.Json_License.txt">
@@ -72,9 +72,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <None Include="CHANGELOG.md" />
     <None Include="Properties\KeyPrivate.snk" />
-    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
