--- a/Liersch.Json/Liersch.Json_netmf.csproj
+++ b/Liersch.Json/Liersch.Json_netmf.csproj
@@ -1,25 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
-    <AssemblyName>Liersch.Json.Demo</AssemblyName>
-    <OutputType>Exe</OutputType>
+    <AssemblyName>Liersch.Json</AssemblyName>
+    <OutputType>Library</OutputType>
     <RootNamespace>Liersch.Json</RootNamespace>
     <ProjectTypeGuids>{b69e3092-b931-443c-abe7-7e7b65f2a37f};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{B60A3990-1261-4ED4-8554-DA8B06846537}</ProjectGuid>
+    <ProjectGuid>{8C223448-9C03-43A3-BD71-5DBA45DBEE6E}</ProjectGuid>
     <TargetFrameworkVersion>v4.4</TargetFrameworkVersion>
     <NetMfTargetsBaseDir Condition="'$(NetMfTargetsBaseDir)'==''">$(MSBuildExtensionsPath32)\Microsoft\.NET Micro Framework\</NetMfTargetsBaseDir>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>bin\Debug\netmf\</OutputPath>
     <DefineConstants>TRACE;DEBUG;NETMF</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -28,29 +24,36 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>bin\Release\netmf\</OutputPath>
     <DefineConstants>TRACE;NETMF</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <LangVersion>3</LangVersion>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.SPOT.Native" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Json\SLJsonConvert_netmf.cs" />
+    <Compile Include="Json\SLJsonException.cs" />
+    <Compile Include="Json\SLJsonMonitor.cs" />
+    <Compile Include="Json\SLJsonNode.cs" />
+    <Compile Include="Json\SLJsonNodeType.cs" />
+    <Compile Include="Json\SLJsonNode_ItemsUntyped.cs" />
+    <Compile Include="Json\SLJsonNode_Monitor.cs" />
+    <Compile Include="Json\SLJsonNode_Operators.cs" />
+    <Compile Include="Json\SLJsonNode_Serialization.cs" />
+    <Compile Include="Json\SLJsonParser.cs" />
+    <Compile Include="Json\SLJsonTokenizer.cs" />
+    <Compile Include="Json\SLJsonWriter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Liersch.Json_netmf.csproj">
-      <Project>{8C223448-9C03-43A3-BD71-5DBA45DBEE6E}</Project>
-      <Name>Liersch.Json_netmf</Name>
-    </ProjectReference>
+    <Content Include="Liersch.Json_License.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Classes\Console.cs" />
-    <Compile Include="Classes\Examples.cs" />
-    <Compile Include="Classes\Program.cs" />
-    <Compile Include="Classes\UnitTest1.cs" />
-    <Compile Include="Classes\UnitTest2.cs" />
-    <Compile Include="Classes\UnitTestHelper.cs" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Condition="EXISTS('$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets')" Project="$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets" />
   <Import Condition="!EXISTS('$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets')" Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
