--- a/Liersch.Json.Demo/Liersch.Json.Demo_netmf.csproj
+++ b/Liersch.Json.Demo/Liersch.Json.Demo_netmf.csproj
@@ -44,9 +44,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\Console.cs" />
-    <Compile Include="Classes\Examples.cs" />
-    <Compile Include="Classes\Program.cs" />
+    <Compile Include="Console.cs" />
+    <Compile Include="Examples.cs" />
+    <Compile Include="Program.cs" />
   </ItemGroup>
   <Import Condition="EXISTS('$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets')" Project="$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets" />
   <Import Condition="!EXISTS('$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets')" Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
