Generic delegate SLJsonConverter comparable with Func<T, TResult> to keep compatible with .NET 2.0 and 3.0

--- a/Liersch.Json/Liersch.Json_net45.csproj
+++ b/Liersch.Json/Liersch.Json_net45.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="JsonReflectionBased\ExtensionAttribute.cs" />
+    <Compile Include="JsonReflectionBased\SLJsonConverter.cs" />
     <Compile Include="JsonReflectionBased\SLJsonDeserializer.cs" />
     <Compile Include="JsonReflectionBased\SLJsonMemberAttribute.cs" />
     <Compile Include="JsonReflectionBased\SLJsonMemberType.cs" />
