--- a/Liersch.Json/Liersch.Json_sdk.csproj
+++ b/Liersch.Json/Liersch.Json_sdk.csproj
@@ -14,6 +14,7 @@
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Properties\KeyPrivate.snk</AssemblyOriginatorKeyFile>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <PackageDescription>Liersch.Json provides support for parsing and generating JSON expressions. The library is written in C# 3.0 targeting many .NET platforms.</PackageDescription>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseFile>Liersch.Json_License.txt</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/steffen-liersch/Liersch.Json</PackageProjectUrl>
