--- a/Liersch.Json/Liersch.Json.csproj
+++ b/Liersch.Json/Liersch.Json.csproj
@@ -10,14 +10,14 @@
     <AssemblyName>Liersch.Json</AssemblyName>
     <AssemblyOriginatorKeyFile>Liersch.Json.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
 
     <PackageId>Liersch.Json</PackageId>
     <Authors>Steffen Liersch</Authors>
     <Company>Steffen Liersch</Company>
     <Copyright>© 2013-2020 Steffen Liersch</Copyright>
     <Product>Liersch.Json</Product>
-    <Description>Small .NET library for parsing and generating JSON documents</Description>
+    <Description>.NET library for parsing and generating JSON documents</Description>
     <VersionPrefix>2.0.0</VersionPrefix>
     <VersionSuffix>beta</VersionSuffix>
     <PackageTags>c# json iot mqtt netmf parser formatter serialization serializer</PackageTags>
