--- a/Liersch.Json.Tests/Liersch.Json.Tests.csproj
+++ b/Liersch.Json.Tests/Liersch.Json.Tests.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿  <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net45;net47;net48</TargetFrameworks>
+    <TargetFrameworks>net45;net47;net48;netcoreapp3.1</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <CheckForOverflowUnderflow Condition="'$(Configuration)'=='Debug'">true</CheckForOverflowUnderflow>
   </PropertyGroup>
