--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,10 @@ name: Build
 
 on:
   push:
-    branches: [dev]
+    branches: [master]
 
   pull_request:
-    branches: [dev]
+    branches: [master]
 
 jobs:
   build:
